<resources>
    <string name="ok_txt">ok</string>
    <string name="chat_related_groupp_id">chat_group_id</string>
    <string name="chat_group_name">CHATS</string>
    <string name="other_groupp_id">other_group_id</string>
    <string name="other_group_name">OTHERS</string>
    <string name="CHANNEL_ID">com.smalsus.redhorizonvbr.redhorizon</string>
    <string name="CHANNEL">Redhorizon</string>
    <string name="CALL_CHANNEL_ID">com.smalsus.redhorizonvbr.call</string>
    <string name="CALL_CHANNEL_NAME">Call Notification</string>
    <string name="CHAT_CHANNEL_ID">com.smalsus.redhorizonvbr.chat</string>
    <string name="CHAT_CHANNEL_NAME">Chat notification</string>
    <string name="facebook_app_id">331393284402960</string>
    <string name="fb_login_protocol_scheme">fb331393284402960</string>
    <string name="Twitter_CONSUMER_KEY">cEzCC4VUW80MvjsESzDzzjdbY</string>
    <string name="Twitter_CONSUMER_SECRET">aA9SDkjRrFBGK0bHUFVReLSPC6xJzezbSubk4x4XRwR7lWhOsU</string>
    <string name="Google_Map_API_KEY">AIzaSyCtXnlzvn1uKrkn7MAaAmzpIdaP8AfLu1U</string>
    <string name="add_event">ADD CALENDAR EVENT</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="app_name">RedHorizon</string>
    <string-array name="eventtype">
        <item>Round Table</item>
        <item>Committee or Conference</item>
        <item>Panel Discussion</item>
        <item>Symposium</item>
        <item>Lecture-Forum</item>
        <item>Others</item>
    </string-array>
    <string-array name="colors">
        <item>Very dark violet</item>
        <item>Moderate cyan - lime green</item>
        <item>Soft red</item>
        <item>Strong blue</item>
        <item>Dark grayish yellow</item>
        <item>Soft blue</item>
    </string-array>
    <string-array name="location">
        <item>Auditorium</item>
        <item>Meeting Room</item>
        <item>Reception Area</item>
        <item>Rooftop</item>
        <item>Coffee Shop</item>
        <item>Sports Stadium</item>
    </string-array>
    <string-array name="reminder">
        <item>5 min</item>
        <item>10 min</item>
        <item>15 min</item>
        <item>20 min</item>
        <item>25 min</item>
    </string-array>
    <string-array name="available">
        <item>Available</item>
        <item>Busy</item>
        <item>In Meeting</item>
        <item>Away</item>
    </string-array>
    <string name="btn_like">Like</string>
    <string name="btn_comment">Comment</string>
    <string name="btn_share">Share</string>
    <string name="item_title" formatted="false">%s posted %s</string>
    <string name="item_date" formatted="false">%s at %s</string>
    <string name="item_likes" formatted="false">%s Likes</string>
    <string name="author_name" formatted="false">Anonymous</string>
    <string name="login_chat_login_error">Login Chat error. Please relogin. Error</string>
    <string name="permission_unavailable">%s is not available now!</string>
    <string name="field_name_user_name">User name</string>
    <string name="field_name_chat_room_name">Chat room name</string>
    <string name="error_name_must_not_contain_special_characters_from_app">%1$s must contain 3 &#8212; %2$s alphanumeric Latin characters without space, the first char must be a letter</string>
    <string name="actionbar_title_settings">Settings</string>
    <string name="text_push_notification_message">"%s is calling you"</string>
    <string name="send_to">Send to</string>
    <string name="pref_startbitratevalue_key">startbitratevalue_preference</string>
    <string name="pref_startbitratevalue_default">0</string>
    <string name="stop_share">Stop</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="virtual_board_room_title">Virtual Board Room</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="title_my_booking">Itinerary</string>
    <string name="title_more">Notification</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="update_profile_btn">Update Profile</string>
    <string name="date_of_birth_hint">Date of Birth</string>
    <string name="password_hint">Password</string>
    <string name="privacy_policy_title">By Signup up , you confirm that you agree to our Term of Use and have read and understood our Privacy Policy.</string>
    <string name="email_hint">Email</string>
    <string name="user_name_hint">UserName</string>
    <string name="phone_no_hint">Phone No</string>
    <string name="dob_hint">DOB</string>
    <string name="gender_hint">Gender</string>
    <string name="male_hint">Male</string>
    <string name="female_hint">Female</string>
    <string name="no_event_today">No Event for Today</string>
    <string name="update_event">Update Event</string>
    <string name="add_event_title">Add Event</string>
    <string name="no_name_hint">No Name</string>
    <string name="no_contact_number">No Contact Number</string>
    <string name="invite_user_from_your_contacts">Invite user from your Contacts</string>
    <string name="contacts_title">Connection</string>
    <string name="meeting_time">Meeting Time :</string>
    <string name="email_or_phone_hint">Email or Phone</string>
    <string name="forgot_password_hint">Forgot Password?</string>
    <string name="team_meeting_tiitle">Team Meeting</string>
    <string name="agenda_hint">Agenda :</string>
    <string name="no_notification_for_you">No Notification for you</string>
    <string name="title_activity_search_event">SearchEventActivity</string>
    <string name="search_box_hint">Technology</string>
    <string name="search_event_title">Search Event</string>
    <string name="topic_hint">Topic :</string>
    <string name="subtopic_hint">Sub Topic :</string>
    <string name="parcticpants_hint">Parcticpants :</string>
    <string name="create_event_title">Create Event</string>
    <string name="subject_hint">Title</string>
    <string name="near_me_title">Near Me</string>
    <string name="web_title">Web</string>
    <string name="dashboard_tab_title">Social</string>
    <string name="clouds_tab_title">Clouds</string>
    <string name="fav_tab_title">Fav</string>
    <string name="camera_tab_title">Camera</string>
    <string name="network_tab_title">Network</string>
    <string name="add_tab_title">Add</string>
    <string name="discover_tab_title">Discover</string>
    <string name="contact_screen_title">CONNECTIONS</string>
    <string name="search_friend_hint">Search Friend</string>
    <string name="invite_friend_title">Invite Friend</string>
    <string name="qr_barcode_scanner">QR+BarCode Scanner</string>
    <string name="turn_speaker_on">Speaker ON</string>
    <string name="callee">client identity or phone number</string>
    <string name="callHint">Dial a client name or phone number. Leaving the field empty results in an automated response.</string>
    <string name="error_retrieving_access_token">Error retrieving token</string>
    <string name="permissions_needed">Camera and Microphone permissions needed. Please allow in App Settings for additional functionality.</string>
    <string name="write_something_here">Write Something here…</string>
    <string name="genrate_qrcode_titile">Genrate QRCode</string>
    <string name="title_activity_product_details">ProductDetailsActivity</string>
    <string name="screen_capture_error">Screen capturer error occurred.</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_order_summary_screen">OrderSummaryScreen</string>
    <string name="screen_capture_permission_not_granted">Screen capture permission not granted</string>
    <string name="title_activity_payment_screen">PaymentScreen</string>
    <string name="googlepay_status_unavailable" translatable="false">Unfortunately, Google Pay is not available on this phone.</string>
    <string name="googlepay_status_checking" translatable="false">Checking if Google Pay is available...</string>
    <string name="payments_show_name" translatable="false">Successfully received payment data for %s!</string>
    <string name="redhorizon_voice_call">REDHORIZON VOICE CALL</string>
    <string name="connected_status">Connected</string>
    <string name="button_text_token">FETCH TOKEN</string>
    <string name="invalid_card_number">Invalid Card Number</string>
    <string name="invalid_month">Invalid Month</string>
    <string name="two_digit_month">Two Digit Month Required</string>
    <string name="invalid_year">Invalid Year</string>
    <string name="invalid_cvv">Invalid CVV</string>
    <string name="invalid_zipcode">Invalid Zipcode</string>
    <string name="error">Error</string>
    <string name="code">"Code: "</string>
    <string name="message">"Message: "</string>
    <string name="extra_message">"Extra Message: "</string>
    <string name="data_descriptor">"Data Descriptor :  "</string>
    <string name="data_value">"Data Value:  "</string>
    <string name="decision">"Decision: "</string>
    <string name="token">"Token"</string>
    <string name="cvv">CVV</string>
    <string name="card_number">Card Number</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="progress_message">Please Wait ... Your Payment is on Progress…</string>
    <string name="progress_title">Please Wait</string>
    <string name="tap_to_return_to_call">Tap to return to Call</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="create_group">Create Group</string>
    <string name="title_activity_group_details_screen">GroupDetailsScreen</string>
</resources>