<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/itineraryAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.smalsus.redhorizonvbr.FixAppBarLayoutBehavior"
        android:background="@color/colorPrimary">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/itineraryCollapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="top"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="?attr/actionBarSize"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/previous_month"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_weight="1"
                        android:src="@drawable/left"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/display_current_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_weight="3"
                        android:fontFamily="@font/montserrat_medium"
                        android:gravity="center"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/next_month"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_weight="1"
                        android:src="@drawable/right"
                        android:visibility="gone" />

                    <Spinner
                        android:id="@+id/month_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:visibility="visible" />


                    <Spinner
                        android:id="@+id/year_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:visibility="visible" />
                </LinearLayout>


                <Button
                    android:id="@+id/add_calendar_event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/add_event"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/week_header_bg_color"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical"
                    android:paddingBottom="4dp"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/sun"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/montserrat_medium"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/sun"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/mon"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_medium"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/mon"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/tue"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/wed"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/wed"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/thu"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_medium"
                        android:gravity="center"
                        android:text="@string/thu"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/fri"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_medium"
                        android:gravity="center"
                        android:text="@string/fri"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sat"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/sat"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/itineraryToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="pin">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/itineraryScreebHeading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="3dp"
                        android:gravity="center"
                        android:fontFamily="@font/montserrat_medium"
                        android:paddingRight="@dimen/fab_margin"
                        android:textAllCaps="true"
                        android:text="@string/title_my_booking"
                        android:textColor="@color/white"
                        android:layout_marginRight="5dp"
                        android:textSize="20sp" />
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_marginRight="@dimen/grid_specing"
                        android:src="@drawable/ai_image"
                        android:scaleType="fitCenter"
                        android:layout_toLeftOf="@+id/addEvent"
                        android:layout_height="40dp" />

                    <ImageButton
                        android:id="@+id/addEvent"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentRight="true"
                        android:background="@android:color/transparent"
                        android:src="@drawable/add_btn"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swipe_refresh_layout"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_height="@dimen/calenderview_height"
                android:padding="@dimen/grid_item_divider"
                android:visibility="visible">
                <com.smalsus.redhorizonvbr.view.CustomGridView
                    android:id="@+id/calendar_grid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:numColumns="7"
                    android:visibility="visible" />
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:background="@drawable/signup_bg"
                android:paddingRight="@dimen/fab_margin"
                android:paddingLeft="@dimen/fab_margin"
                android:paddingTop="@dimen/grid_specing"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:id="@+id/creatEventContainer"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/grid_specing"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/createEvent"
                        android:layout_width="wrap_content"
                        android:layout_alignParentRight="true"
                        android:textSize="@dimen/create_event_text_size"
                        android:gravity="center_vertical"
                        android:textColor="@color/white"
                        android:visibility="visible"
                        android:drawableLeft="@drawable/add_btn"
                        android:fontFamily="@font/montserrat_medium"
                        android:text=" Create Event"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
                <TextView
                    android:id="@+id/noEventForTodayTextView"
                    android:layout_width="wrap_content"
                    android:layout_marginRight="@dimen/fab_margin"
                    android:textSize="@dimen/tab_title_text_size"
                    android:textColor="@color/white"
                    android:visibility="visible"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/no_event_today"
                    android:layout_height="wrap_content"/>
                <com.smalsus.redhorizonvbr.view.NonScrollListView
                    android:id="@+id/listevent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/grid_specing"
                    android:layout_marginBottom="60dp"
                    android:layout_below="@+id/creatEventContainer"
                    android:divider="@android:color/transparent"
                    android:dividerHeight="@dimen/grid_specing" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>